# tracking_lib

./: CMakeLists.txt  README.md  package.xml
config/: detection.yaml  tracking.yaml
config/kitti/: Segmenter.yaml  TrackingWorker.yaml
example/: CMakeLists.txt
include/tracking/: base_tracking_worker.h  hm_tracking_worker.hpp  tracking_worker_manager.hpp
include/tracking/distances/: tracker_obsv_distance.hpp
include/tracking/filters/: base_filter.hpp  robust_kalman_filter.h
include/tracking/matchers/: base_tracker_obsv_matcher.h  hungarian_tracker_obsv_matcher.hpp
include/tracking/trackers/: multi_object_tracker.hpp  object_tracker.hpp
launch/: demo.launch
rviz/: demo.rviz
samples/: CMakeLists.txt  detection_node.cpp  tracking_node.cpp
src/: hm_tracking_worker.cpp
src/distances/: tracker_obsv_distance.cpp
src/filters/: robust_kalman_filter.cpp
src/matchers/: hungarian_tracker_obsv_matcher.cpp
src/trackers/: multi_object_tracker.cpp  object_tracker.cpp
